# baf-walkthrough-python-bookstore

./: .dockerignore  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/skills/spec-create/: SKILL.md
.claude/skills/spec-critique/: SKILL.md
.claude/skills/spec-final-review/: SKILL.md
.claude/skills/spec-finalize/: SKILL.md
.claude/skills/spec-implement/: SKILL.md
.claude/skills/spec-review/: SKILL.md
.claude/skills/spec-status/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml  feature.yml
app/: database.py  isbn.py  main.py  models.py  schemas.py
app/routes/: books.py
context/: PROCESS.md  SUMMARY.md
context/prompts/: spec-create.md  spec-critique.md  spec-final-review.md  spec-finalize.md  spec-implement.md  spec-review.md
context/specs/1-bookstore-rest-api/: DECISIONS.md  IMPLEMENTATION_SPEC.md  README.md
context/specs/1-bookstore-rest-api/spec-reviews/: GEMINI.md
context/specs/3-docker-dev-environment/: DECISIONS.md  IMPLEMENTATION_SPEC.md  README.md
context/specs/3-docker-dev-environment/code-reviews/: CODEX.md  GEMINI.md
context/specs/3-docker-dev-environment/spec-reviews/: CRITIQUE.md  GEMINI.md
docs/: docker-dev-guide.md
scripts/: bootstrap-labels.sh  bootstrap.sh
tests/: conftest.py  test_books.py  test_isbn.py  test_search.py
walkthroughs/: go-cli-calculator.md  python-bookstore-api.md  react-retro-game-hub.md
