[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bookstore-api"
version = "0.1.0"
description = "REST API for managing a bookstore catalog"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
